Aggiunto style - Esercizio bonus finito

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -5,3 +5,10 @@ body {
     background-color: #272727;
     color: white;
 }
+
+.card-info {
+    background-color: teal;
+    border-radius: 10px;
+    height: 220px;
+    width: 210px;
+}
